src/components/Increment/Increment.scss
@import '../../utils/scss/';

.#{$global-prefix}increment {
  display: flex;
  justify-content: center;
  align-content: center;
  flex-wrap: nowrap;
  flex-direction: row;
  align-items: center;
  margin-bottom: $global-margin;

  .select-container {
    position: relative;
    min-width: 40px;
    height: 40px;

    select {
      position: absolute;
      left: 0;
    }

    > select,
    > span {
      margin: 0;
      padding: 0;
      line-height: 1;
      min-width: 40px;
      line-height: 40px;
      text-align: center;
      border: 0 none;
      outline: none;
      cursor: pointer;
    }
  }

  button {
    width: 40px;
    min-width: 40px;
    max-width: 40px;
    line-height: 20px;
    margin: 0;
    padding: 10px;
    display: inline-block;
  }
}

